--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
 <GridPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -22,9 +21,9 @@
             <AnchorPane layoutX="69.0" layoutY="66.0" prefHeight="330.0" prefWidth="533.0">
                <children>
                   <Button fx:id="button_login" layoutX="265.0" layoutY="251.0" mnemonicParsing="false" text="Login" />
-                  <TextField fx:id="text_userName" layoutX="227.0" layoutY="129.0" />
-                  <TextField fx:id="text_ip" layoutX="227.0" layoutY="175.0" />
-                  <TextField fx:id="text_port" layoutX="227.0" layoutY="214.0" />
+                  <TextField fx:id="text_userName" layoutX="227.0" layoutY="129.0" text="alaa" />
+                  <TextField fx:id="text_ip" layoutX="227.0" layoutY="175.0" text="127.0.0.1" />
+                  <TextField fx:id="text_port" layoutX="227.0" layoutY="214.0" text="1500" />
                   <Label layoutX="139.0" layoutY="133.0" text="Username" />
                   <Label layoutX="139.0" layoutY="179.0" text="ip" />
                   <Label layoutX="139.0" layoutY="218.0" text="port" />
