--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="sample.Controller">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
-   <children>
-      <AnchorPane prefHeight="345.0" prefWidth="389.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="button_send" layoutX="323.0" layoutY="306.0" mnemonicParsing="false" text="Button" />
-            <TextField fx:id="text_send" layoutX="38.0" layoutY="294.0" prefHeight="25.0" prefWidth="257.0" />
-            <TextArea fx:id="text_show" layoutX="38.0" layoutY="32.0" prefHeight="244.0" prefWidth="257.0" />
+            <ListView fx:id="list_show" prefHeight="345.0" prefWidth="376.0" />
+            <HBox prefHeight="65.0" prefWidth="500.0">
+               <children>
+                  <TextArea fx:id="text_send" prefHeight="60.0" prefWidth="446.0" />
+                  <Button fx:id="button_send" mnemonicParsing="false" text="Send" />
+               </children>
+            </HBox>
          </children>
-      </AnchorPane>
-   </children>
-</GridPane>
+      </VBox>
+   </center>
+   <left>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <ListView fx:id="list_users" prefHeight="403.0" prefWidth="100.0" />
+         </children>
+      </VBox>
+   </left>
+</BorderPane>
