--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -21,12 +21,14 @@
             <AnchorPane layoutX="69.0" layoutY="66.0" prefHeight="330.0" prefWidth="533.0">
                <children>
                   <Button fx:id="button_login" layoutX="265.0" layoutY="251.0" mnemonicParsing="false" text="Login" />
-                  <TextField fx:id="text_userName" layoutX="227.0" layoutY="129.0" text="alaa" />
+                  <TextField fx:id="text_userName" layoutX="227.0" layoutY="97.0" text="alaa" />
                   <TextField fx:id="text_ip" layoutX="227.0" layoutY="175.0" text="127.0.0.1" />
                   <TextField fx:id="text_port" layoutX="227.0" layoutY="214.0" text="1500" />
-                  <Label layoutX="139.0" layoutY="133.0" text="Username" />
+                  <Label layoutX="139.0" layoutY="101.0" text="Username" />
                   <Label layoutX="139.0" layoutY="179.0" text="ip" />
                   <Label layoutX="139.0" layoutY="218.0" text="port" />
+                  <TextField fx:id="text_password" layoutX="227.0" layoutY="140.0" text="alaa" />
+                  <Label layoutX="139.0" layoutY="144.0" text="Password" />
                </children>
             </AnchorPane>
          </children>
