--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="668.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -16,6 +16,7 @@
                <children>
                   <TextArea fx:id="text_send" prefHeight="60.0" prefWidth="446.0" />
                   <Button fx:id="button_send" mnemonicParsing="false" text="Send" />
+                  <Button fx:id="button_logout" mnemonicParsing="false" text="Logout" />
                </children>
             </HBox>
          </children>
