--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -3,10 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
    <columnConstraints>
@@ -16,19 +19,44 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane prefHeight="300.0" prefWidth="800.0">
          <children>
-            <AnchorPane layoutX="69.0" layoutY="66.0" prefHeight="330.0" prefWidth="533.0">
+            <AnchorPane layoutX="196.0" layoutY="61.0" prefHeight="337.0" prefWidth="469.0">
                <children>
-                  <Button fx:id="button_login" layoutX="265.0" layoutY="251.0" mnemonicParsing="false" text="Login" />
-                  <TextField fx:id="text_userName" layoutX="227.0" layoutY="97.0" text="alaa" />
-                  <TextField fx:id="text_ip" layoutX="227.0" layoutY="175.0" text="127.0.0.1" />
-                  <TextField fx:id="text_port" layoutX="227.0" layoutY="214.0" text="1500" />
-                  <Label layoutX="139.0" layoutY="101.0" text="Username" />
-                  <Label layoutX="139.0" layoutY="179.0" text="ip" />
-                  <Label layoutX="139.0" layoutY="218.0" text="port" />
-                  <TextField fx:id="text_password" layoutX="227.0" layoutY="140.0" text="alaa" />
-                  <Label layoutX="139.0" layoutY="144.0" text="Password" />
+                  <ImageView fitHeight="500.0" fitWidth="800.0" layoutX="-196.0" layoutY="-61.0">
+                     <image>
+                        <Image url="@../form.jpg" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="button_login" layoutX="298.0" layoutY="318.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="170.0" style="-fx-background-color: #111111;" text="Login" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="21.0" />
+                     </font></Button>
+                  <TextField fx:id="text_userName" layoutX="343.0" layoutY="143.0" text="alaa" />
+                  <TextField fx:id="text_ip" layoutX="343.0" layoutY="221.0" text="127.0.0.1" />
+                  <TextField fx:id="text_port" layoutX="343.0" layoutY="260.0" text="1500" />
+                  <Label layoutX="255.0" layoutY="147.0" text="Username:">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Label>
+                  <Label layoutX="255.0" layoutY="225.0" text="Server Ip:">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="12.0" />
+                     </font></Label>
+                  <Label layoutX="255.0" layoutY="264.0" text="Port:">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="12.0" />
+                     </font></Label>
+                  <TextField fx:id="text_password" layoutX="343.0" layoutY="186.0" text="alaa" />
+                  <Label layoutX="255.0" layoutY="190.0" text="Password:">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="12.0" />
+                     </font></Label>
+                  <ImageView fitHeight="100.0" fitWidth="200.0" layoutX="270.0" layoutY="10.0">
+                     <image>
+                        <Image url="@../signin.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
          </children>
