--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -25,7 +25,7 @@
                <children>
                   <ImageView fitHeight="500.0" fitWidth="800.0" layoutX="-196.0" layoutY="-61.0">
                      <image>
-                        <Image url="@../form.jpg" />
+                        <Image url="@form.jpg" />
                      </image>
                   </ImageView>
                   <Button fx:id="button_login" layoutX="298.0" layoutY="318.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="170.0" style="-fx-background-color: #111111;" text="Login" textFill="WHITE">
@@ -54,7 +54,7 @@
                      </font></Label>
                   <ImageView fitHeight="100.0" fitWidth="200.0" layoutX="270.0" layoutY="10.0">
                      <image>
-                        <Image url="@../signin.png" />
+                        <Image url="@signin.png" />
                      </image>
                   </ImageView>
                </children>
